log
Fri Apr 17 05:58:35 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
51eb798
Fri Apr 17 06:06:14 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:28: error: void value not ignored as it ought to be
   49 |     if(new == NULL) return exit(0);
      |                            ^~~~~~~
81104b1
Fri Apr 17 06:06:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
293a9a3
Fri Apr 17 06:07:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
0e8bc49
Fri Apr 17 06:15:23 PM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:31: error: comparison between pointer and integer [-Werror]
   75 |     if(map->buckets[pos]->key == -1) map->buckets[pos] = nuevo;
      |                               ^~
cc1: all warnings being treated as errors
ef7f8c8
Fri Apr 17 06:16:18 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
3e4c768
Fri Apr 17 06:17:23 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/60
8cc0045
Fri Apr 17 06:21:30 PM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:86:23: error: ‘capacity’ undeclared (first use in this function)
   86 |             if(pos == capacity) pos = 0;
      |                       ^~~~~~~~
hashmap.c:86:23: note: each undeclared identifier is reported only once for each function it appears in
ecf9478
Fri Apr 17 06:22:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa1a4aa
Fri Apr 17 06:23:13 PM UTC 2026: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
408abcd
Fri Apr 17 06:23:56 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0223abe
Fri Apr 17 06:26:24 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
2a5ed95
Fri Apr 17 06:42:08 PM UTC 2026: 
 hashmap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 10/60
ef0880b
Fri Apr 17 06:43:51 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:88:34: error: passing argument 2 of ‘resolver_colisiones’ makes pointer from integer without a cast [-Wint-conversion]
   88 |         resolver_colisiones(map, pos);
      |                                  ^~~
      |                                  |
      |                                  long int
hashmap.c:47:48: note: expected ‘char *’ but argument is of type ‘long int’
   47 | long resolver_colisiones(HashMap * map, char * key){
      |                                         ~~~~~~~^~~
0377aa3
Fri Apr 17 06:44:16 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 10/60
a732ef1
Fri Apr 17 06:46:47 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 10/60
182850a
Fri Apr 17 06:47:53 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:118:12: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
  118 |     return pos;
      |            ^~~
b52aac6
Fri Apr 17 06:48:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 10/60
b12c470
Fri Apr 17 06:52:21 PM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 10/60
4aa4923
Fri Apr 17 06:52:53 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 20/60
3d0d5f2
Fri Apr 17 06:53:38 PM UTC 2026: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 30/60
90a24f9
Fri Apr 17 06:59:46 PM UTC 2026: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  8|3
total_score: 30/60
d20e638
Fri Apr 17 07:02:29 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:103:21: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
  103 |     if(map == NULL) return;
      |                     ^~~~~~
hashmap.c:102:8: note: declared here
  102 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
5b05957
Fri Apr 17 07:02:41 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
3316fe7
Fri Apr 17 11:18:23 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:132:18: error: statement with no effect [-Werror=unused-value]
  132 |     buscado->key == NULL;
      |                  ^
cc1: all warnings being treated as errors
183f571
Fri Apr 17 11:18:46 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
845be4e
